More reponsiveness changes to codeblocks to prevent ugly text wrapping.

--- a/css/site.css
+++ b/css/site.css
@@ -123,7 +123,6 @@ section {
 .section-body {
     font-size: 0.9em;
     line-height: 1.4em;
-    display: grid;
 }
 
 .pubs, .posts {
@@ -185,10 +184,8 @@ section {
 }
 
 .content pre, .content div.sourceCode {
-    justify-self: center;
-    font-size: 0.8em;
+    font-size: 0.9em;
     text-align: left;
-    white-space: pre-wrap;
 }
 
 .content pre {
@@ -199,6 +196,8 @@ section {
     background: #f5f5f5;
     padding: 1em;
     border-radius: 0.2em;
+    overflow: auto;
+    overflow-y: hidden;
 }
 
 .content .sourceCode a.sourceLine, .content .sourceCode a:visited.sourceLine {
@@ -213,7 +212,6 @@ pre code.sourceCode {
     padding: 0;
     font-size: inherit;
     color: inherit;
-    white-space: pre-wrap;
     background-color: transparent;
     border-radius: 0;
 }
@@ -336,10 +334,29 @@ hr {
     .content img {
         width: 75%;
     }
+
+    .section-body {
+        display: grid;
+    }
+
+    .content pre, .content div.sourceCode {
+        justify-self: center;
+        overflow: auto;
+    }
+
+    .content pre {
+        max-width: 420px;
+    }
 }
 
 @media (min-width: 890px) {
     nav .navlinks {
         grid-template-columns: repeat(6, 1fr);
+    }
+}
+
+@media (min-width: 1080px) {
+    .content pre {
+        max-width: min-content;
     }
 }
